# Bananas

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: CI.yml
PyBananas/: .gitignore  README.md  pyproject.toml
PyBananas/src/pybananas/: __init__.py  __main__.py  env.py  input.py  rom.py  state.py
PyBananas/tests/: test_env_smoke.py  test_input.py  test_rom.py
scripts/: build.sh  clean.sh  init.sh  play.sh
src/: crosshair.c  crosshair.h  game.c  game.h  gfx.c  gfx.h  input.c  input.h  main.c  math.h  oam.c  oam.h  player.c  player.h  projectile.c  projectile.h  sfx.c  sfx.h  splash.c  splash.h  statusbar.c  statusbar.h  terrain.c  terrain.h  viewport.c  viewport.h
